about page change picture add gap, fix responsive

--- a/src/components/about/AboutPage.module.css
+++ b/src/components/about/AboutPage.module.css
@@ -46,7 +46,6 @@
   }
 
   .aboutText {
-    width: 50%;
     font-size: 22px;
     font-weight: 400;
     margin: 60px 0 0 53px;
